Fixed spacing

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ h1{
 }
 
 #bottom-buttons{
-    padding-top: 50px;
+    padding-top: 30px;
 }
 
 .dial-col{
